--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+# IDEs
+.idea
+.vscode
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+bin
 
 # Test binary, built with `go test -c`
 *.test
